--- a/galeria/templates/galeria/index.html
+++ b/galeria/templates/galeria/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/dc663d69b4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/galeria.css' %}">
     <script src="asset/JavaScript/jquery-3.7.0.js"></script>
 
 
@@ -24,8 +24,8 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand logo" href="./index.html">
-                <img src="./asset/img/LOGO.png" alt="Logo" width="30" height="30" class="d-inline-block">
+            <a class="navbar-brand logo" href="{% url 'index' %}">
+                <img src="{% static 'img/logo.png' %}" alt="Logo" width="30" height="30" class="d-inline-block">
                 Grupo Cero
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,9 +41,9 @@
                             Categorias
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="pinturas.html">Pintura</a></li>
-                            <li><a class="dropdown-item" href="esculturas.html">Escultura</a></li>
-                            <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+                            <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
+                            <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
+                            <li><a class="dropdown-item" href="orfebreria">Orfebreria</a></li>
                             <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
                             <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
                         </ul>
@@ -70,8 +70,8 @@
 
                     </div>
 
-                    <a class="navbar-brand Carro" href="./index.html">
-                        <img src="./asset/img/carrito.png" alt="Carro" width="35" height="35" class="d-inline-block">
+                    <a class="navbar-brand Carro" href="{% url 'index' %}">
+                        <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
 
                     </a>
                 </nav>
@@ -87,17 +87,17 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="asset/img/banner/b1.png" class="d-block w-100" alt="...">
+                <img src="{% static 'img/banner/b1.png' %}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="asset/img/banner/b2.png" class="d-block w-100" alt="...">
+                <img src="{% static 'img/banner/b2.png' %}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="asset/img/banner/b3.png" class="d-block w-100" alt="...">
+                <img src="{% static 'img/banner/b3.png' %}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
@@ -286,35 +286,35 @@
         <div class="row">
             <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
                 <div class="card">
-                    <img src="asset/img/categoria/escultura-cat.png" class="card-img-top" alt="categorias1">
+                    <img src="{% static 'img/categoria/escultura-cat.png' %}" class="card-img-top" alt="categorias1">
                     <div class="card-body">
-                        <a href="./esculturas.html" type="button" class="btn btn-outline-secondary">E S C U L T U R
+                        <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">E S C U L T U R
                             A</a>
                     </div>
                 </div>
             </div>
             <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
                 <div class="card">
-                    <img src="asset/img/categoria/orfebrería-cat.png" class="card-img-top" alt="categorias2">
+                    <img src="{% static 'img/categoria/orfebrería-cat.png' %}" class="card-img-top" alt="categorias2">
                     <div class="card-body">
-                        <a href="./orfebreria.html" type="button" class="btn btn-outline-secondary">O R F E B R E R I
+                        <a href="orfebreria" type="button" class="btn btn-outline-secondary">O R F E B R E R I
                             A</a>
                     </div>
                 </div>
             </div>
             <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
                 <div class="card">
-                    <img src="asset/img/categoria/pintura-cat.png" class="card-img-top" alt="pcategorias3">
+                    <img src="{% static 'img/categoria/pintura-cat.png' %}" class="card-img-top" alt="pcategorias3">
                     <div class="card-body">
-                        <a href="./pinturas.html" type="button" class="btn btn-outline-secondary">P I N T U R A S</a>
+                        <a href="{% url 'pinturas' %}" type="button" class="btn btn-outline-secondary">P I N T U R A S</a>
                     </div>
                 </div>
             </div>
             <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
                 <div class="card">
-                    <img src="asset/img/categoria/tejido-cat.png" class="card-img-top" alt="categorias4">
+                    <img src="{% static 'img/categoria/tejido-cat.png' %}" class="card-img-top" alt="categorias4">
                     <div class="card-body">
-                        <a href="./tejido.html" type="button" class="btn btn-outline-secondary">T E J I D O</a>
+                        <a href="tejido" type="button" class="btn btn-outline-secondary">T E J I D O</a>
                     </div>
                 </div>
             </div>
@@ -330,7 +330,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-12">
                     <div>
-                        <img class="rounded imgseccion2" src="asset/img/categoria/escultura-cat.png" alt="">
+                        <img class="rounded imgseccion2" src="{% static 'img/categoria/escultura-cat.png' %}" alt="">
                     </div>
                 </div>
                 <div class="tituloseccion2 col-lg-6 col-sm-12 p-4">
@@ -362,7 +362,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12 p-4">
                     <div>
-                        <img class="rounded imgseccion2" src="asset/img/categoria/pintura-cat.png" alt="">
+                        <img class="rounded imgseccion2" src="{% static 'img/categoria/pintura-cat.png' %}" alt="">
                     </div>
                 </div>
 
@@ -375,7 +375,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-12 p-4">
                     <div>
-                        <img class="rounded imgseccion2" src="asset/img/categoria/orfebrería-cat.png" alt="">
+                        <img class="rounded imgseccion2" src="{% static 'img/categoria/orfebrería-cat.png' %}" alt="">
                     </div>
                 </div>
                 <div class="tituloseccion2 col-lg-6 col-sm-12">
@@ -400,16 +400,16 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./asset/img/escultura/es-carrusel.png" class="d-block w-100" alt="esc">
+                        <img src="{% static 'img/escultura/es-carrusel.png' %}" class="d-block w-100" alt="esc">
                     </div>
                     <div class="carousel-item">
-                        <img src="./asset/img/orfebrería/or-carrusel.png" class="d-block w-100" alt="orc">
+                        <img src="{% static 'img/orfebrería/or-carrusel.png' %}" class="d-block w-100" alt="orc">
                     </div>
                     <div class="carousel-item">
-                        <img src="./asset/img/pintura/pin-carrusel.png" class="d-block w-100" alt="pinc">
+                        <img src="{% static 'img/pintura/pin-carrusel.png' %}" class="d-block w-100" alt="pinc">
                     </div>
                     <div class="carousel-item">
-                        <img src="./asset/img/tejido/te-carrusel.png" class="d-block w-100" alt="tec">
+                        <img src="{% static 'img/tejido/te-carrusel.png' %}" class="d-block w-100" alt="tec">
                     </div>
                 </div>
             </div>
@@ -436,8 +436,8 @@
                 <a class="linkfooter" href="">Comunidad</a>
             </div>
             <div class="col">
-                <a class="navbar-brand logo" href="index.html">
-                    <img src="./asset/img/LOGO.png" alt="Logo" width="30" height="30" class="d-inline-block">
+                <a class="navbar-brand logo" href="{% url 'index' %}">
+                    <img src="{% static 'img/logo.png' %}" alt="Logo" width="30" height="30" class="d-inline-block">
                 </a>
             </div>
             <div class="col">
