--- a/galeria/templates/galeria/orfebreria/anillos.html
+++ b/galeria/templates/galeria/orfebreria/anillos.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
               <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
               <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
               <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
             </ul>
@@ -64,6 +64,7 @@
 
           </div>
 
+
           <a class="navbar-brand Carro" href="{% url 'index' %}">
             <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
              
@@ -74,22 +75,19 @@
   </nav>
 
  
- 
 <div class="container-producto-1">
   <div class="sub-container-producto-1">
-
+    
   <!--Carrusel-->
 
   <div id="carouselExampleFade" class="carousel slide carousel-fade">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'img/escultura/es2/es-2-1.png' %}" class="d-block w-100" alt="...">
-        
+        <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="d-block w-100" alt="...">        
       </div>
       <div class="carousel-item">
-        <img src="{% static 'img/escultura/es2/es-2-2.png' %}" class="d-block w-100" alt="...">
-        
-      </div>
+        <img src="{% static 'img/orfebrería/anillos/anillo2.png' %}" class="d-block w-100" alt="...">        
+      </div> 
      </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -105,72 +103,73 @@
 
   
 
-  <div class="sub-container-producto-2">
-    <table class="table">
-      <h4> BISOGNO </h4>
-        <thead>
-          <tr>
-            <th scope="col" colspan="2">Detalle del Producto</th>
-            <th scope="col"></th>                
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Autor:</th>
-            <td>Lorenza Gaete</td>                
-          </tr>
-          <tr>
-            <th scope="row">Año:</th>
-            <td>2021</td>                
-          </tr>
-          <tr>
-            <th scope="row">Categoria:</th>
-            <td>Escultura</td>                
-          </tr>
-          <tr>
-            <th scope="row">Valor:</th>
-            <td>$115.000</td>
-          </tr>
-          <tr>
-            <th scope="row">Descripción:</th>
-            <td>Set de cuatro piezas de arcilla que juegan con las texturas y las sombras, embelleceran cualquier espacio en el que esten.
-            </td>
-          </tr>              
-        </tbody>
-      </table>
-      <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
-      <button id="btn-effect" type="submit" class="btn btn-secondary">Agregar al Carro</button>  
-</div>
+    <div class="sub-container-producto-2">
+        <table class="table">
+          <h4> SET TESORO DEL PACÍFICO </h4>
+            <thead>
+              <tr>
+                <th scope="col" colspan="2">Detalle del Producto</th>
+                <th scope="col"></th>                
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Autor:</th>
+                <td>Javiera Reyes</td>                
+              </tr>
+              <tr>
+                <th scope="row">Año:</th>
+                <td>2023</td>                
+              </tr>
+              <tr>
+                <th scope="row">Categoria:</th>
+                <td>Anillos</td>                
+              </tr>
+              <tr>
+                <th scope="row">Valor:</th>
+                <td>$175.000</td>
+              </tr>
+              <tr>
+                <th scope="row">Descripción:</th>
+                <td>Joyas inspiradas en el Oceano Pacífico, en su movimiento y tesoros escondidos.
+                  Piezas bañadas en oro y cuarzo blanco 90% de pureza.
+                </td>
+              </tr>              
+            </tbody>
+          </table>
+          <a href="{% url 'orfebreria' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
+          <button id="btn-effect" type="submit" class="btn btn-secondary">Agregar al Carro</button>  
+    </div>
 
-</div>
+  </div>
 
 
 <div class="container-producto-1">
 
-<div class="title-producto">
-    <h3>OTRAS OBRAS</h3>
+    <div class="title-producto">
+        <h3>OTRAS OBRAS</h3>
 
-</div>
+    </div>
 
     <div class="sub-container-img">
         <div class="sub-container-img-1">
-          <a href="{% url 'escultura3' %}">
-            <img src="{% static 'img/escultura/es3/es-3-1.png' %}" class="img-fluid img-producto-1">
+          <a href="{% url 'escultura2' %}">
+            <img src="{% static 'img/escultura/es2/es-2-1.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-principal.png' %}" class="img-fluid img-producto-1">
+          <a href="./tejido1.html">
+            <img src="{% static 'img/tejido/tejido 1/t1-principal.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./anillos.html">
-            <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="img-fluid img-producto-1">
+          <a href="{% url 'aretes' %}">
+            <img src="{% static 'img/orfebrería/aretes/a2.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="{% url 'pintura3' %}">
-            <img src="{% static 'img/pintura/p3/p3 principal.png' %}" class="img-fluid img-producto-1">
+          <a href="{% url 'collar' %}">
+            <img src="{% static 'img/orfebrería/collar/collar2.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
 
