--- a/galeria/templates/galeria/orfebreria/aretes.html
+++ b/galeria/templates/galeria/orfebreria/aretes.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
               <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
               <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
               <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
             </ul>
@@ -64,6 +64,7 @@
 
           </div>
 
+
           <a class="navbar-brand Carro" href="{% url 'index' %}">
             <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
              
@@ -72,23 +73,22 @@
       </div>
     </div>
   </nav>
+ 
 
- 
- 
 <div class="container-producto-1">
   <div class="sub-container-producto-1">
 
+
+    
   <!--Carrusel-->
 
   <div id="carouselExampleFade" class="carousel slide carousel-fade">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'img/escultura/es2/es-2-1.png' %}" class="d-block w-100" alt="...">
-        
+        <img src="{% static 'img/orfebrería/aretes/a1.png' %}" class="d-block w-100" alt="...">        
       </div>
       <div class="carousel-item">
-        <img src="{% static 'img/escultura/es2/es-2-2.png' %}" class="d-block w-100" alt="...">
-        
+        <img src="{% static 'img/orfebrería/aretes/a2.png' %}" class="d-block w-100" alt="...">        
       </div>
      </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -103,11 +103,9 @@
   </div>
 
 
-  
-
   <div class="sub-container-producto-2">
     <table class="table">
-      <h4> BISOGNO </h4>
+      <h4> PERLAS DE SIRENA </h4>
         <thead>
           <tr>
             <th scope="col" colspan="2">Detalle del Producto</th>
@@ -117,28 +115,29 @@
         <tbody>
           <tr>
             <th scope="row">Autor:</th>
-            <td>Lorenza Gaete</td>                
+            <td>Javiera Reyes</td>                
           </tr>
           <tr>
             <th scope="row">Año:</th>
-            <td>2021</td>                
+            <td>2022</td>                
           </tr>
           <tr>
             <th scope="row">Categoria:</th>
-            <td>Escultura</td>                
+            <td>Aros</td>                
           </tr>
           <tr>
             <th scope="row">Valor:</th>
-            <td>$115.000</td>
+            <td>$220.000</td>
           </tr>
           <tr>
             <th scope="row">Descripción:</th>
-            <td>Set de cuatro piezas de arcilla que juegan con las texturas y las sombras, embelleceran cualquier espacio en el que esten.
+            <td>Pendientes inspirados en la elegancia y femeneidad de los materiales entregados.
+              Aretes de oro y Perlas reales de gran calidad.
             </td>
           </tr>              
         </tbody>
       </table>
-      <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
+      <a href="{% url 'orfebreria' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
       <button id="btn-effect" type="submit" class="btn btn-secondary">Agregar al Carro</button>  
 </div>
 
@@ -147,25 +146,25 @@
 
 <div class="container-producto-1">
 
-<div class="title-producto">
-    <h3>OTRAS OBRAS</h3>
+    <div class="title-producto">
+        <h3>OTRAS OBRAS</h3>
 
-</div>
+    </div>
 
     <div class="sub-container-img">
         <div class="sub-container-img-1">
-          <a href="{% url 'escultura3' %}">
-            <img src="{% static 'img/escultura/es3/es-3-1.png' %}" class="img-fluid img-producto-1">
+          <a href="{% url 'escultura1' %}">
+            <img src="{% static 'img/escultura/es1/es-1-1.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-principal.png' %}" class="img-fluid img-producto-1">
+          <a href="./tejido2.html">
+            <img src="{% static 'img/tejido/tejido 2/t2-principal.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./anillos.html">
-            <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="img-fluid img-producto-1">
+          <a href="{% url 'anillos' %}">
+            <img src="{% static 'img/orfebrería/anillos/anillo2.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
