--- a/galeria/templates/galeria/orfebreria/orfebreria.html
+++ b/galeria/templates/galeria/orfebreria/orfebreria.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
               <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
               <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
               <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
             </ul>
@@ -64,6 +64,7 @@
 
           </div>
 
+
           <a class="navbar-brand Carro" href="{% url 'index' %}">
             <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
              
@@ -74,108 +75,56 @@
   </nav>
 
  
- 
-<div class="container-producto-1">
-  <div class="sub-container-producto-1">
 
-  <!--Carrusel-->
+  <!-- TITULAR -->
 
-  <div id="carouselExampleFade" class="carousel slide carousel-fade">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/escultura/es2/es-2-1.png' %}" class="d-block w-100" alt="...">
-        
+  <div class="container mt-5 text-center">
+    <div class="row">
+      <h1>Javiera Reyes</h1>
+        <h4>Artista Orfebre</h4>
+      <div class="col-12">
+        <div class="col-sm-12 col-lg-5">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/escultura/es2/es-2-2.png' %}" class="d-block w-100" alt="...">
-        
-      </div>
-     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  </div>
-
-
-  
-
-  <div class="sub-container-producto-2">
-    <table class="table">
-      <h4> BISOGNO </h4>
-        <thead>
-          <tr>
-            <th scope="col" colspan="2">Detalle del Producto</th>
-            <th scope="col"></th>                
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Autor:</th>
-            <td>Lorenza Gaete</td>                
-          </tr>
-          <tr>
-            <th scope="row">Año:</th>
-            <td>2021</td>                
-          </tr>
-          <tr>
-            <th scope="row">Categoria:</th>
-            <td>Escultura</td>                
-          </tr>
-          <tr>
-            <th scope="row">Valor:</th>
-            <td>$115.000</td>
-          </tr>
-          <tr>
-            <th scope="row">Descripción:</th>
-            <td>Set de cuatro piezas de arcilla que juegan con las texturas y las sombras, embelleceran cualquier espacio en el que esten.
-            </td>
-          </tr>              
-        </tbody>
-      </table>
-      <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
-      <button id="btn-effect" type="submit" class="btn btn-secondary">Agregar al Carro</button>  
-</div>
-
-</div>
-
-
-<div class="container-producto-1">
-
-<div class="title-producto">
-    <h3>OTRAS OBRAS</h3>
-
-</div>
-
-    <div class="sub-container-img">
-        <div class="sub-container-img-1">
-          <a href="{% url 'escultura3' %}">
-            <img src="{% static 'img/escultura/es3/es-3-1.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-        <div class="sub-container-img-1">
-          <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-principal.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-        <div class="sub-container-img-1">
-          <a href="./anillos.html">
-            <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-        <div class="sub-container-img-1">
-          <a href="{% url 'pintura3' %}">
-            <img src="{% static 'img/pintura/p3/p3 principal.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-
+      
     </div>
-    
+  </div>
+
+
+<!-- catalogo -->
+
+<div class="container orfebreria text-center">
+  <div class="row">
+    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
+      <div class="card">
+        <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="card-img-top" alt="or1">
+        <div class="card-body">
+          <a href="{% url 'anillos' %}" type="button" class="btn btn-outline-secondary">V E R</a>
+        </div>
+      </div>
+    </div>
+    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
+      <div class="card">
+        <img src="{% static 'img/orfebrería/aretes/a1.png' %}" class="card-img-top" alt="or2">
+        <div class="card-body">
+          <a href="{% url 'aretes' %}" type="button" class="btn btn-outline-secondary">V E R</a>
+        </div>
+      </div>
+    </div>
+    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
+      <div class="card">
+        <img src="{% static 'img/orfebrería/collar/collar1.png' %}" class="card-img-top" alt="or3">
+        <div class="card-body">
+          <a href="{% url 'collar' %}" type="button" class="btn btn-outline-secondary">V E R</a>
+        </div>
+      </div>
+    </div>
+    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
+      <div class="card">
+        <img src="{% static 'img/PROXIMAMENTE.png' %}" class="card-img-top" alt="PRO">
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
@@ -265,9 +214,5 @@
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
   integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.7.0.min.js"
-  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-  crossorigin="anonymous"></script>
-  <script src="asset/JavaScript/btn.js" type="text/JavaScript"></script>
+
 </html>
