--- a/galeria/templates/galeria/pinturas/pintura2.html
+++ b/galeria/templates/galeria/pinturas/pintura2.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
               <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
               <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
               <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
             </ul>
@@ -59,7 +59,7 @@
         </form>
         <nav class="navbar bg-body-tertiary">
           <div>
-            <a href="login.html"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
+            <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
             <a href="registro.html"><button class=" btn btn-secondary ml-2" type="submit">Registrarse</button></a>
 
           </div>
@@ -151,7 +151,7 @@
 
     <div class="sub-container-img">
         <div class="sub-container-img-1">
-          <a href="./escultura3.html">
+          <a href="{% url 'escultura3' %}">
             <img src="{% static 'img/escultura/es3/es-3-2.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
@@ -161,7 +161,7 @@
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./anillos.html">
+          <a href="{% url 'anillos' %}">
             <img src="{% static 'img/orfebrería/anillos/anillo2.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
@@ -266,5 +266,5 @@
   src="https://code.jquery.com/jquery-3.7.0.min.js"
   integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
   crossorigin="anonymous"></script>
-  <script src="asset/JavaScript/btn.js" type="text/JavaScript"></script>
+  <script src="{% static 'JavaScript/btn.js' %}" type="text/JavaScript"></script>
 </html>
