--- a/galeria/templates/galeria/esculturas/escultura1.html
+++ b/galeria/templates/galeria/esculturas/escultura1.html
@@ -39,7 +39,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
               <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="orfebreria.html">Orfebreria</a></li>
+              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
               <li><a class="dropdown-item" href="tejido.html">Tejido</a></li>
               <li><a class="dropdown-item" href="categoria.html">Ver Todo</a></li>
             </ul>
@@ -60,7 +60,7 @@
         <nav class="navbar bg-body-tertiary">
           <div>
             <div>
-              <a href="login.html"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
+              <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
               <a href="registro.html"><button class=" btn btn-secondary ml-2" type="submit">Registrarse</button></a>
   
             </div>
@@ -164,12 +164,12 @@
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./collar.html">
+          <a href="{% url 'collar' %}">
             <img src="{% static 'img/orfebrería/collar/collar1.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
-          <a href="./aretes.html">
+          <a href="{% url 'aretes' %}">
             <img src="{% static 'img/orfebrería/aretes/a1.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
@@ -269,5 +269,5 @@
   src="https://code.jquery.com/jquery-3.7.0.min.js"
   integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
   crossorigin="anonymous"></script>
-  <script src="asset/JavaScript/btn.js" type="text/JavaScript"></script>
+  <script src="{% static 'JavaScript/btn.js' %}" type="text/JavaScript"></script>
 </html>
