--- a/galeria/templates/galeria/login.html
+++ b/galeria/templates/galeria/login.html
@@ -76,58 +76,36 @@
 
  
 
-  <!-- TITULAR -->
+  <div class="title-login container mt-5  ">
+    <h3>Log-In</h3>
+    <p>¿Nuevo en nuestro sitio? Registrate <a href="./registro.html"><strong>aquí</strong></a></p>
+  </div>
 
-  <div class="container mt-5 text-center">
-    <div class="row">
-      <h1>Javiera Reyes</h1>
-        <h4>Artista Orfebre</h4>
-      <div class="col-12">
-        <div class="col-sm-12 col-lg-5">
-        </div>
-      </div>
+  <!--Login-->
+  
+  <div class="login bg-light rounded shadow-sm">
+    <form action="{% url 'loginForm' %}" method="post">
+
+      {% csrf_token %}
+   
       
-    </div>
+      <div class="mb-3">
+        <input type="email" class="form-control validarEmail" id="{{ form.correo.id_for_label }}" placeholder="Correo"
+          aria-describedby="emailHelp" name="{{ form.correo.html_name }}">
+          <p id="resultApi"></p>
+      </div>
+
+      <div class="mb-3">
+        <input maxlength="8" minlength="8" type="password" class="form-control" id="{{ form.clave.id_for_label }}" placeholder="Ingresa tu Contraseña" name="{{ form.clave.html_name }}" required pattern="[a-zA-Z]+[0-9]+">
+      </div>
+       
+      <button class="btn btn-secondary" type="submit">Log In</button>
+      </form>
   </div>
-
-
-<!-- catalogo -->
-
-<div class="container orfebreria text-center">
-  <div class="row">
-    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
-      <div class="card">
-        <img src="{% static 'img/orfebrería/anillos/anillo1.png' %}" class="card-img-top" alt="or1">
-        <div class="card-body">
-          <a href="{% url 'anillos' %}" type="button" class="btn btn-outline-secondary">V E R</a>
-        </div>
-      </div>
-    </div>
-    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
-      <div class="card">
-        <img src="{% static 'img/orfebrería/aretes/a1.png' %}" class="card-img-top" alt="or2">
-        <div class="card-body">
-          <a href="{% url 'aretes' %}" type="button" class="btn btn-outline-secondary">V E R</a>
-        </div>
-      </div>
-    </div>
-    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
-      <div class="card">
-        <img src="{% static 'img/orfebrería/collar/collar1.png' %}" class="card-img-top" alt="or3">
-        <div class="card-body">
-          <a href="{% url 'collar' %}" type="button" class="btn btn-outline-secondary">V E R</a>
-        </div>
-      </div>
-    </div>
-    <div class="orfebreria col-md-3 mb-1 mb-sm-4 pt-5">
-      <div class="card">
-        <img src="{% static 'img/PROXIMAMENTE.png' %}" class="card-img-top" alt="PRO">
-      </div>
-    </div>
-  </div>
-</div>
-
 </body>
+
+
+
 
 <!-- Footer -->
 
@@ -214,5 +192,9 @@
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
   integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-
+  <script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"></script>
+  <script src="{% static 'JavaScript/api.js' %}" type="text/JavaScript"></script>
 </html>
