se agrega categoria

--- a/galeria/templates/galeria/categoria.html
+++ b/galeria/templates/galeria/categoria.html
@@ -59,124 +59,61 @@
         </form>
         <nav class="navbar bg-body-tertiary">
           <div>
-            <div>
-              <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
-              <a href="registro.html"><button class=" btn btn-secondary ml-2" type="submit">Registrarse</button></a>
-  
-            </div>
+            <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesion</button></a>
+            <a href="registro.html"><button class=" btn btn-secondary ml-2" type="submit">Registrarse</button></a>
+
+          </div>
 
 
           <a class="navbar-brand Carro" href="{% url 'index' %}">
-            <img src="{% static 'img/carrito.pn' %}" alt="Carro" width="35" height="35" class="d-inline-block">
-             
+            <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
+
           </a>
         </nav>
       </div>
     </div>
   </nav>
 
- 
-<div class="container-producto-1">
-  <div class="sub-container-producto-1">
-  <!--Carrusel-->
 
-  <div id="carouselExampleFade" class="carousel slide carousel-fade">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/escultura/es1/es-1-1.png' %}" class="d-block w-100" alt="...">
-        
+  <!--Tarjetas de categorias-->
+
+  <div class="container categorias text-center mt-5">
+    <div class="row">
+      <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
+        <div class="card">
+          <img src="{% static 'img/categoria/escultura-cat.png' %}" class="card-img-top" alt="categorias1">
+          <div class="card-body">
+            <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">E S C U L T U R A</a>
+          </div>
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/escultura/es1/es-1-2.png' %}" class="d-block w-100" alt="...">
-        
+      <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
+        <div class="card">
+          <img src="{% static 'img/categoria/orfebrería-cat.png' %}" class="card-img-top" alt="categorias2">
+          <div class="card-body">
+            <a href="{% url 'orfebreria' %}" type="button" class="btn btn-outline-secondary">O R F E B R E R I A</a>
+          </div>
+        </div>
       </div>
-     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  </div>
-
-
-  
-
-  <div class="sub-container-producto-2">
-    <table class="table">
-      <h4> PUREZZA </h4>
-        <thead>
-          <tr>
-            <th scope="col" colspan="2">Detalle del Producto</th>
-            <th scope="col"></th>                
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Autor:</th>
-            <td>Lorenza Gaete</td>                
-          </tr>
-          <tr>
-            <th scope="row">Año:</th>
-            <td>2022</td>                
-          </tr>
-          <tr>
-            <th scope="row">Categoria:</th>
-            <td>Escultura</td>                
-          </tr>
-          <tr>
-            <th scope="row">Valor:</th>
-            <td>$65.000</td>
-          </tr>
-          <tr>
-            <th scope="row">Descripción:</th>
-            <td>Jarrones de ceramica, elaborados con agua de río solo en luna llena, elevando la pureza del arte.
-            </td>
-          </tr>              
-        </tbody>
-      </table>
-      <a href="{% url 'esculturas' %}" type="button" class="btn btn-outline-secondary">VOLVER</a>
-      <button id="btn-effect" type="button" class="btn btn-secondary">Agregar al Carro</button>  
-</div>
-
-</div>
-
-
-<div class="container-producto-1">
-
-<div class="title-producto">
-    <h3>OTRAS OBRAS</h3>
-
-</div>
-
-    <div class="sub-container-img">
-        <div class="sub-container-img-1">
-          <a href="{% url 'pintura1' %}">
-            <img src="{% static 'img/pintura/p1/p1 principal.png' %}" class="img-fluid img-producto-1">
-          </a>
+      <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
+        <div class="card">
+          <img src="{% static 'img/categoria/pintura-cat.png' %}" class="card-img-top" alt="pcategorias3">
+          <div class="card-body">
+            <a href="{% url 'pinturas' %}" type="button" class="btn btn-outline-secondary">P I N T U R A S</a>
+          </div>
         </div>
-        <div class="sub-container-img-1">
-          <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-principal.png' %}" class="img-fluid img-producto-1">
-          </a>
+      </div>
+      <div class="Categorias col-sm-4 col-md-3 mb-1 mb-sm-0 pt-4">
+        <div class="card">
+          <img src="{% static 'img/categoria/tejido-cat.png' %}" class="card-img-top" alt="categorias4">
+          <div class="card-body">
+            <a href="./tejido.html" type="button" class="btn btn-outline-secondary">T E J I D O</a>
+          </div>
         </div>
-        <div class="sub-container-img-1">
-          <a href="{% url 'collar' %}">
-            <img src="{% static 'img/orfebrería/collar/collar1.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-        <div class="sub-container-img-1">
-          <a href="{% url 'aretes' %}">
-            <img src="{% static 'img/orfebrería/aretes/a1.png' %}" class="img-fluid img-producto-1">
-          </a>
-        </div>
-
+      </div>
     </div>
-    
-</div>
+  </div>
+
 
 </body>
 
@@ -206,7 +143,7 @@
     </div>
   </div>
   <hr class="solid">
-  
+
   <!-- Grid container -->
   <div class="container pt-4  col-lg-6 px-5">
     <!-- Section: Social media -->
@@ -265,9 +202,5 @@
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
   integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.7.0.min.js"
-  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-  crossorigin="anonymous"></script>
-  <script src="{% static 'JavaScript/btn.js' %}" type="text/JavaScript"></script>
+
 </html>
