--- a/galeria/templates/galeria/login.html
+++ b/galeria/templates/galeria/login.html
@@ -77,7 +77,7 @@
 
   <div class="title-login container mt-5  ">
     <h3>Log-In</h3>
-    <p>¿Nuevo en nuestro sitio? Registrate <a href="./registro.html"><strong>aquí</strong></a></p>
+    <p>¿Nuevo en nuestro sitio? Registrate <a href="{% url 'registro' %}"><strong>aquí</strong></a></p>
   </div>
 
   <!--Login-->
