--- a/galeria/templates/galeria/esculturas/escultura1.html
+++ b/galeria/templates/galeria/esculturas/escultura1.html
@@ -158,7 +158,7 @@
         </div>
         <div class="sub-container-img-1">
           <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-principal.png' %}" class="img-fluid img-producto-1">
+            <img src="{% static 'img/tejido/tejido3/t3prin.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
