--- a/galeria/templates/galeria/orfebreria/anillos.html
+++ b/galeria/templates/galeria/orfebreria/anillos.html
@@ -156,7 +156,7 @@
         </div>
         <div class="sub-container-img-1">
           <a href="./tejido1.html">
-            <img src="{% static 'img/tejido/tejido 1/t1-principal.png' %}" class="img-fluid img-producto-1">
+            <img src="{% static 'img/tejido/tejido1/t1prin.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
