--- a/galeria/templates/galeria/orfebreria/collar.html
+++ b/galeria/templates/galeria/orfebreria/collar.html
@@ -162,12 +162,12 @@
         </div>
         <div class="sub-container-img-1">
           <a href="./tejido2.html">
-            <img src="{% static 'img/tejido/tejido 2/t2-principal.png' %}" class="img-fluid img-producto-1">
+            <img src="{% static 'img/tejido/tejido2/t2prin.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
           <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-1.png' %}" class="img-fluid img-producto-1">
+            <img src="{% static 'img/tejido/tejido3/t31.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
 
