--- a/galeria/templates/galeria/index.html
+++ b/galeria/templates/galeria/index.html
@@ -31,18 +31,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categorias
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'pinturas' %}">Pintura</a></li>
-              <li><a class="dropdown-item" href="{% url 'esculturas' %}">Escultura</a></li>
-              <li><a class="dropdown-item" href="{% url 'orfebreria' %}">Orfebreria</a></li>
-              <li><a class="dropdown-item" href="{% url 'tejido' %}">Tejido</a></li>
-              <li><a class="dropdown-item" href="{% url 'categoria' %}">Ver Todo</a></li>
-            </ul>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'categoria' %}">Categorias</a>
+              </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'artistas' %}">Artistas</a>
           </li>
@@ -71,9 +62,6 @@
       </div>
     </div>
   </nav>
-
-
-
 
     <!--Carrusel-->
 
