--- a/galeria/templates/galeria/pinturas/pintura3.html
+++ b/galeria/templates/galeria/pinturas/pintura3.html
@@ -155,7 +155,7 @@
         </div>
         <div class="sub-container-img-1">
           <a href="./tejido3.html">
-            <img src="{% static 'img/tejido/tejido 3/t3-1.png' %}" class="img-fluid img-producto-1">
+            <img src="{% static 'img/tejido/tejido3/t31.png' %}" class="img-fluid img-producto-1">
           </a>
         </div>
         <div class="sub-container-img-1">
