--- a/galeria/templates/galeria/perfil.html
+++ b/galeria/templates/galeria/perfil.html
@@ -55,7 +55,7 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
+            <a class="nav-link" href="{% url 'lista_productos' %}">Obras Publicadas</a>
           </li>
           {% endif %}
         </ul>
