--- a/galeria/templates/galeria/crear_producto.html
+++ b/galeria/templates/galeria/crear_producto.html
@@ -55,7 +55,7 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
+            <a class="nav-link" href="{% url 'lista_productos' %}">Obras Publicadas</a>
           </li>
           {% endif %}
         </ul>
@@ -88,6 +88,7 @@
   </nav>
 
 
+
   <div class="title-login container mt-5">
     <h1>Crear producto</h1>
     <p> </p>
@@ -101,9 +102,16 @@
       <input type="file" name="imagenes" accept="image/*" multiple>
       <div class="text-end">
         <button type="submit" class="btn btn-secondary">Guardar cambios</button>
-        <button onclick="window.location.href='{% url 'lista_productos' %}'" class="btn btn-secondary">Volver</button>
+        <br>
+        <div> {% if mensaje %}
+          <div class="alert alert-success mt-3" role="alert">
+            {{ mensaje }}
+          </div>
+          {% endif %}</div>
+
       </div>
     </form>
+
   </div>
 
 </body>
