--- a/galeria/templates/galeria/editar_producto.html
+++ b/galeria/templates/galeria/editar_producto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% load static %}
+{% load static %}
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,37 +54,38 @@
             <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
           </li>
           {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
-                </li>
-                {% endif %}
-            </ul>
-            <div class="d-flex align-items-center">
-                <p class="mb-0 me-3">
-                    {% if user.is_authenticated %}
-                    Bienvenid@ {{ user.username }}
-                    {% endif %}
-                </p>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-3" type="search" placeholder="Buscar" aria-label="Search">
-                </form>
-            </div>
-            <div>
-                {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary">Salir de la sesión</button></a>
-                {% else %}
-                <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesión</button></a>
-                <a href="{% url 'registro' %}"><button class="btn btn-secondary ml-2" type="submit">Registrarse</button></a>
-                {% endif %}
-            </div>
-            <div>
-                <a class="navbar-brand Carro" href="{% url 'index' %}">
-                    <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
-                </a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
+          </li>
+          {% endif %}
+        </ul>
+        <div class="d-flex align-items-center">
+          <p class="mb-0 me-3">
+            {% if user.is_authenticated %}
+            Bienvenid@ {{ user.username }}
+            {% endif %}
+          </p>
+          <form class="d-flex" role="search">
+            <input class="form-control me-3" type="search" placeholder="Buscar" aria-label="Search">
+          </form>
         </div>
+        <div>
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary">Salir de la sesión</button></a>
+          {% else %}
+          <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar
+              Sesión</button></a>
+          <a href="{% url 'registro' %}"><button class="btn btn-secondary ml-2" type="submit">Registrarse</button></a>
+          {% endif %}
+        </div>
+        <div>
+          <a class="navbar-brand Carro" href="{% url 'index' %}">
+            <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
+          </a>
+        </div>
+      </div>
     </div>
-</nav>
+  </nav>
 
 
   <div class="title-login container mt-5">
@@ -103,8 +105,8 @@
       </div>
     </form>
   </div>
-  
-  
+
+
 
 </body>
 
@@ -112,87 +114,88 @@
 
 <footer class="text-center">
 
-    <div class="container d-none d-sm-block">
+  <div class="container d-none d-sm-block">
+    <div class="row ">
+      <div class="col">
+        <a class="linkfooter" href="">Contacto</a>
+      </div>
+      <div class="col">
+        <a class="linkfooter" href="">Comunidad</a>
+      </div>
+      <div class="col">
+        <a class="navbar-brand logo" href="{% url 'index' %}">
+          <img src="{% static 'img/log.png' %}" alt="Logo" width="100" height="40" class="d-inline-block"
+            style="margin-top: -10px;">
+        </a>
+      </div>
+
+      <div class="col">
+        <a class="linkfooter" href="">Ayuda</a>
+      </div>
+      <div class="col">
+        <a class="linkfooter" href="">Recursos</a>
+      </div>
+    </div>
+  </div>
+  <hr class="solid">
+
+  <!-- Grid container -->
+  <div class="container pt-4  col-lg-6 px-5">
+    <!-- Section: Social media -->
+    <section class="mb-4">
       <div class="row ">
         <div class="col">
-          <a class="linkfooter" href="">Contacto</a>
+          <!-- Facebook -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class="col">
-          <a class="linkfooter" href="">Comunidad</a>
+          <!-- Twitter -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
         </div>
         <div class="col">
-          <a class="navbar-brand logo" href="{% url 'index' %}">
-              <img src="{% static 'img/log.png' %}" alt="Logo" width="100" height="40" class="d-inline-block" style="margin-top: -10px;">
-          </a>
+          <!-- Google -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
+        </div>
+        <div class="col">
+
+          <!-- Instagram -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="col">
+          <!-- Linkedin -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="col">
+          <!-- Github -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+        </div>
       </div>
-      
-        <div class="col">
-          <a class="linkfooter" href="">Ayuda</a>
-        </div>
-        <div class="col">
-          <a class="linkfooter" href="">Recursos</a>
-        </div>
-      </div>
-    </div>
-    <hr class="solid">
-    
-    <!-- Grid container -->
-    <div class="container pt-4  col-lg-6 px-5">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <div class="row ">
-          <div class="col">
-            <!-- Facebook -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-facebook-f"></i></a>
-          </div>
-          <div class="col">
-            <!-- Twitter -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
-          </div>
-          <div class="col">
-            <!-- Google -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
-          </div>
-          <div class="col">
-  
-            <!-- Instagram -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="col">
-            <!-- Linkedin -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
-          </div>
-          <div class="col">
-            <!-- Github -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
-          </div>
-        </div>
-  
-      </section>
-      <!-- Section: Social media -->
-    </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2023 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">GrupoCero.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  
-  <!-- End of .container -->
-  
-  
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-  
-  </html>
+
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2023 Copyright:
+    <a class="text-dark" href="https://mdbootstrap.com/">GrupoCero.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+
+<!-- End of .container -->
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+  integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+  integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+
+</html>
